--- a/🤗Zero_Shot_Pipeline_for_NER.ipynb
+++ b/🤗Zero_Shot_Pipeline_for_NER.ipynb
@@ -1013,10 +1013,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "yTBP_QYuu6tc",
-        "outputId": "cb234285-2db1-48cf-c724-9c14f62d413f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "cb234285-2db1-48cf-c724-9c14f62d413f"
       },
       "source": [
         "!pip install transformers==3.1.0"
@@ -1080,7 +1080,6 @@
       "cell_type": "code",
       "metadata": {
         "id": "spkccRiv0CB3",
-        "outputId": "86549513-5417-46eb-c2d2-1e69d3df9d94",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 299,
@@ -1118,7 +1117,8 @@
             "21793324a9da47f38fe9cbe612609d37",
             "fc15ca6a61a9420fab847f35450860bc"
           ]
-        }
+        },
+        "outputId": "86549513-5417-46eb-c2d2-1e69d3df9d94"
       },
       "source": [
         "#classifier = pipeline(\"zero-shot-classification\")\n",
@@ -1265,7 +1265,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "75bf9bbc-19e3-4573-f86a-9a40b6496993"
+        "outputId": "93c778f2-396d-43b8-f053-57ebf9a24729"
       },
       "source": [
         "sequence = input(\"Enter a paragraph to do NER on.\")\n",
@@ -1274,89 +1274,16 @@
         "\n",
         "NER = zeroshot_NER(sequence, candidate_labels, 0.4)\n",
         "for each in NER:\n",
-        "  print(each)"
+        "  print(f\"{each[0]}[{each[1]}]\", end=\" \")"
       ],
-      "execution_count": 49,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Enter a paragraph to do NER on.Machine learning (ML) is the study of computer algorithms that improve automatically through experience.[1] It is seen as a subset of artificial intelligence. Machine learning algorithms build a model based on sample data, known as \"training data\", in order to make predictions or decisions without being explicitly programmed to do so.[2] Machine learning algorithms are used in a wide variety of applications, such as email filtering and computer vision, where it is difficult or unfeasible to develop conventional algorithms to perform the needed tasks. \n",
             "Enter candidate labels separated by double colon(::).Machine Learning::Computer Science::Math\n",
-            "['machine', 'Machine Learning']\n",
-            "['learning', '[UNK]']\n",
-            "['is', '[UNK]']\n",
-            "['the', '[UNK]']\n",
-            "['study', '[UNK]']\n",
-            "['of', '[UNK]']\n",
-            "['computer', 'Computer Science']\n",
-            "['algorithms', 'Machine Learning']\n",
-            "['that', '[UNK]']\n",
-            "['improve', '[UNK]']\n",
-            "['automatically', '[UNK]']\n",
-            "['through', '[UNK]']\n",
-            "['it', '[UNK]']\n",
-            "['is', '[UNK]']\n",
-            "['seen', '[UNK]']\n",
-            "['as', '[UNK]']\n",
-            "['a', '[UNK]']\n",
-            "['subset', '[UNK]']\n",
-            "['of', '[UNK]']\n",
-            "['artificial', '[UNK]']\n",
-            "['machine', 'Machine Learning']\n",
-            "['learning', '[UNK]']\n",
-            "['algorithms', 'Machine Learning']\n",
-            "['build', '[UNK]']\n",
-            "['a', '[UNK]']\n",
-            "['model', '[UNK]']\n",
-            "['based', '[UNK]']\n",
-            "['on', '[UNK]']\n",
-            "['sample', '[UNK]']\n",
-            "['known', '[UNK]']\n",
-            "['as', '[UNK]']\n",
-            "['in', '[UNK]']\n",
-            "['order', '[UNK]']\n",
-            "['to', '[UNK]']\n",
-            "['make', '[UNK]']\n",
-            "['predictions', '[UNK]']\n",
-            "['or', '[UNK]']\n",
-            "['decisions', '[UNK]']\n",
-            "['without', '[UNK]']\n",
-            "['being', '[UNK]']\n",
-            "['explicitly', '[UNK]']\n",
-            "['programmed', '[UNK]']\n",
-            "['to', '[UNK]']\n",
-            "['do', '[UNK]']\n",
-            "['machine', 'Machine Learning']\n",
-            "['learning', '[UNK]']\n",
-            "['algorithms', 'Machine Learning']\n",
-            "['are', '[UNK]']\n",
-            "['used', '[UNK]']\n",
-            "['in', '[UNK]']\n",
-            "['a', '[UNK]']\n",
-            "['wide', '[UNK]']\n",
-            "['variety', '[UNK]']\n",
-            "['of', '[UNK]']\n",
-            "['such', '[UNK]']\n",
-            "['as', '[UNK]']\n",
-            "['email', '[UNK]']\n",
-            "['filtering', '[UNK]']\n",
-            "['and', '[UNK]']\n",
-            "['computer', 'Computer Science']\n",
-            "['where', '[UNK]']\n",
-            "['it', '[UNK]']\n",
-            "['is', '[UNK]']\n",
-            "['difficult', '[UNK]']\n",
-            "['or', '[UNK]']\n",
-            "['unfeasible', '[UNK]']\n",
-            "['to', '[UNK]']\n",
-            "['develop', '[UNK]']\n",
-            "['conventional', '[UNK]']\n",
-            "['algorithms', 'Machine Learning']\n",
-            "['to', '[UNK]']\n",
-            "['perform', '[UNK]']\n",
-            "['the', '[UNK]']\n",
-            "['needed', '[UNK]']\n"
+            "machine[Machine Learning] learning[[UNK]] is[[UNK]] the[[UNK]] study[[UNK]] of[[UNK]] computer[Computer Science] algorithms[Machine Learning] that[[UNK]] improve[[UNK]] automatically[[UNK]] through[[UNK]] it[[UNK]] is[[UNK]] seen[[UNK]] as[[UNK]] a[[UNK]] subset[[UNK]] of[[UNK]] artificial[[UNK]] machine[Machine Learning] learning[[UNK]] algorithms[Machine Learning] build[[UNK]] a[[UNK]] model[[UNK]] based[[UNK]] on[[UNK]] sample[[UNK]] known[[UNK]] as[[UNK]] in[[UNK]] order[[UNK]] to[[UNK]] make[[UNK]] predictions[[UNK]] or[[UNK]] decisions[[UNK]] without[[UNK]] being[[UNK]] explicitly[[UNK]] programmed[[UNK]] to[[UNK]] do[[UNK]] machine[Machine Learning] learning[[UNK]] algorithms[Machine Learning] are[[UNK]] used[[UNK]] in[[UNK]] a[[UNK]] wide[[UNK]] variety[[UNK]] of[[UNK]] such[[UNK]] as[[UNK]] email[[UNK]] filtering[[UNK]] and[[UNK]] computer[Computer Science] where[[UNK]] it[[UNK]] is[[UNK]] difficult[[UNK]] or[[UNK]] unfeasible[[UNK]] to[[UNK]] develop[[UNK]] conventional[[UNK]] algorithms[Machine Learning] to[[UNK]] perform[[UNK]] the[[UNK]] needed[[UNK]] "
           ],
           "name": "stdout"
         }
@@ -1365,11 +1292,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "S4kH8DCeyKnr",
-        "outputId": "8d64c6f7-3c11-49cf-c929-349b0ebada03",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "S4kH8DCeyKnr",
+        "outputId": "8d64c6f7-3c11-49cf-c929-349b0ebada03"
       },
       "source": [
         ""
