--- a/Data_Preparation_for_CoNLL2003.ipynb
+++ b/Data_Preparation_for_CoNLL2003.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Data_Preparation_for_CoNLL2003.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM3/FreJ7yD2Gx7TFfqpaiE",
+      "authorship_tag": "ABX9TyMmPOC/ZJyNWpa5qh/FDNJR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,9 +25,511 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eQg17RyG_m0q"
+      },
+      "source": [
+        "1. Upload the data to Colab.\n",
+        "2. Then run the following cells to prepare for the Regression task."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "iDE_JvWo_YR6"
+      },
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "filename = \"/content/train.txt\""
+      ],
+      "execution_count": 10,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        },
+        "id": "iJOHGJu-AFDh",
+        "outputId": "aa9d914f-97dc-4849-9b9e-c899a828ca12"
+      },
+      "source": [
+        "df = pd.read_csv(filename, sep=\" \", skiprows=0)\n",
+        "df"
+      ],
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>-DOCSTART-</th>\n",
+              "      <th>-X-</th>\n",
+              "      <th>-X-.1</th>\n",
+              "      <th>O</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>EU</td>\n",
+              "      <td>NNP</td>\n",
+              "      <td>B-NP</td>\n",
+              "      <td>B-ORG</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>rejects</td>\n",
+              "      <td>VBZ</td>\n",
+              "      <td>B-VP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>German</td>\n",
+              "      <td>JJ</td>\n",
+              "      <td>B-NP</td>\n",
+              "      <td>B-MISC</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>call</td>\n",
+              "      <td>NN</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>to</td>\n",
+              "      <td>TO</td>\n",
+              "      <td>B-VP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>204561</th>\n",
+              "      <td>three</td>\n",
+              "      <td>CD</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>204562</th>\n",
+              "      <td>Swansea</td>\n",
+              "      <td>NN</td>\n",
+              "      <td>B-NP</td>\n",
+              "      <td>B-ORG</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>204563</th>\n",
+              "      <td>1</td>\n",
+              "      <td>CD</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>204564</th>\n",
+              "      <td>Lincoln</td>\n",
+              "      <td>NNP</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>B-ORG</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>204565</th>\n",
+              "      <td>2</td>\n",
+              "      <td>CD</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>204566 rows × 4 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       -DOCSTART-  -X- -X-.1       O\n",
+              "0              EU  NNP  B-NP   B-ORG\n",
+              "1         rejects  VBZ  B-VP       O\n",
+              "2          German   JJ  B-NP  B-MISC\n",
+              "3            call   NN  I-NP       O\n",
+              "4              to   TO  B-VP       O\n",
+              "...           ...  ...   ...     ...\n",
+              "204561      three   CD  I-NP       O\n",
+              "204562    Swansea   NN  B-NP   B-ORG\n",
+              "204563          1   CD  I-NP       O\n",
+              "204564    Lincoln  NNP  I-NP   B-ORG\n",
+              "204565          2   CD  I-NP       O\n",
+              "\n",
+              "[204566 rows x 4 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yHu9C_XMAKs4"
+      },
+      "source": [
+        "# Rename columns.\n",
+        "'''\n",
+        "    The columns names are - \n",
+        "    1. Token : These are the tokens that are present in the dataset.\n",
+        "    2. POS-Tag : These are the Part of Speech Tags\n",
+        "    3. SC-Tag : These are Syntactic Chunk Tags. (https://www.ling.upenn.edu/courses/Fall_2003/ling001/penn_treebank_pos.html)\n",
+        "    4. NE-Tag : These are the Named Entity Tags.\n",
+        "    \n",
+        "    More info on what the POS and SC represents -> (https://medium.com/greyatom/learning-pos-tagging-chunking-in-nlp-85f7f811a8cb)\n",
+        "'''\n",
+        "column_names = {'-DOCSTART-':'Token', \n",
+        "                '-X-':'POS-Tag', \n",
+        "                '-X-.1':'SC-Tag', \n",
+        "                'O':'NE-Tag'}\n",
+        "\n",
+        "df.rename(columns=column_names, errors=\"raise\", inplace=True)"
+      ],
+      "execution_count": 12,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 423
+        },
+        "id": "gbyIfNk_ATcm",
+        "outputId": "36f75ce9-ceca-4ec0-d1dd-cd9355523984"
+      },
+      "source": [
+        "# Convert the IOB tags to O tags. (Remove B and I distinction.)\n",
+        "IOB_map =  {'B-ORG' : 'ORG',\n",
+        "            'I-ORG' : 'ORG',\n",
+        "            'B-PER' : 'PER',\n",
+        "            'I-PER' : 'PER',\n",
+        "            'B-LOC' : 'LOC',\n",
+        "            'I-LOC' : 'LOC',\n",
+        "            'B-MISC' : 'MISC',\n",
+        "            'I-MISC' : 'MISC',\n",
+        "            'O' : 'O'}\n",
+        "NE_tags = df['NE-Tag'].map(IOB_map)\n",
+        "\n",
+        "df['NE-Tag'] = NE_tags\n",
+        "df"
+      ],
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Token</th>\n",
+              "      <th>POS-Tag</th>\n",
+              "      <th>SC-Tag</th>\n",
+              "      <th>NE-Tag</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>EU</td>\n",
+              "      <td>NNP</td>\n",
+              "      <td>B-NP</td>\n",
+              "      <td>ORG</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>rejects</td>\n",
+              "      <td>VBZ</td>\n",
+              "      <td>B-VP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>German</td>\n",
+              "      <td>JJ</td>\n",
+              "      <td>B-NP</td>\n",
+              "      <td>MISC</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>call</td>\n",
+              "      <td>NN</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>to</td>\n",
+              "      <td>TO</td>\n",
+              "      <td>B-VP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>204561</th>\n",
+              "      <td>three</td>\n",
+              "      <td>CD</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>204562</th>\n",
+              "      <td>Swansea</td>\n",
+              "      <td>NN</td>\n",
+              "      <td>B-NP</td>\n",
+              "      <td>ORG</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>204563</th>\n",
+              "      <td>1</td>\n",
+              "      <td>CD</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>204564</th>\n",
+              "      <td>Lincoln</td>\n",
+              "      <td>NNP</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>ORG</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>204565</th>\n",
+              "      <td>2</td>\n",
+              "      <td>CD</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>204566 rows × 4 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "          Token POS-Tag SC-Tag NE-Tag\n",
+              "0            EU     NNP   B-NP    ORG\n",
+              "1       rejects     VBZ   B-VP      O\n",
+              "2        German      JJ   B-NP   MISC\n",
+              "3          call      NN   I-NP      O\n",
+              "4            to      TO   B-VP      O\n",
+              "...         ...     ...    ...    ...\n",
+              "204561    three      CD   I-NP      O\n",
+              "204562  Swansea      NN   B-NP    ORG\n",
+              "204563        1      CD   I-NP      O\n",
+              "204564  Lincoln     NNP   I-NP    ORG\n",
+              "204565        2      CD   I-NP      O\n",
+              "\n",
+              "[204566 rows x 4 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 363
+        },
+        "id": "OtiJcJltBxzW",
+        "outputId": "79d8b5b2-6321-43c5-bcd4-63de4119ddbf"
+      },
+      "source": [
+        "df.head(10)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Token</th>\n",
+              "      <th>POS-Tag</th>\n",
+              "      <th>SC-Tag</th>\n",
+              "      <th>NE-Tag</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>EU</td>\n",
+              "      <td>NNP</td>\n",
+              "      <td>B-NP</td>\n",
+              "      <td>ORG</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>rejects</td>\n",
+              "      <td>VBZ</td>\n",
+              "      <td>B-VP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>German</td>\n",
+              "      <td>JJ</td>\n",
+              "      <td>B-NP</td>\n",
+              "      <td>MISC</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>call</td>\n",
+              "      <td>NN</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>to</td>\n",
+              "      <td>TO</td>\n",
+              "      <td>B-VP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>boycott</td>\n",
+              "      <td>VB</td>\n",
+              "      <td>I-VP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>British</td>\n",
+              "      <td>JJ</td>\n",
+              "      <td>B-NP</td>\n",
+              "      <td>MISC</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>lamb</td>\n",
+              "      <td>NN</td>\n",
+              "      <td>I-NP</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>.</td>\n",
+              "      <td>.</td>\n",
+              "      <td>O</td>\n",
+              "      <td>O</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>Peter</td>\n",
+              "      <td>NNP</td>\n",
+              "      <td>B-NP</td>\n",
+              "      <td>PER</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "     Token POS-Tag SC-Tag NE-Tag\n",
+              "0       EU     NNP   B-NP    ORG\n",
+              "1  rejects     VBZ   B-VP      O\n",
+              "2   German      JJ   B-NP   MISC\n",
+              "3     call      NN   I-NP      O\n",
+              "4       to      TO   B-VP      O\n",
+              "5  boycott      VB   I-VP      O\n",
+              "6  British      JJ   B-NP   MISC\n",
+              "7     lamb      NN   I-NP      O\n",
+              "8        .       .      O      O\n",
+              "9    Peter     NNP   B-NP    PER"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mOB2c4_dCEWt"
       },
       "source": [
         ""
